<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ilya.chistousov.countthefood.signin.presentation.fragment.ErrorSignInWithEmailDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_in_error"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/CustomTextStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email_or_password_error"
            android:gravity="center"
            android:textSize="18sp"
            android:textAppearance="@style/CustomTextStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents"
            android:backgroundTint="@color/light_green"
            android:textAppearance="@style/CustomTextStyle"
            android:textAllCaps="false"
            android:layout_gravity="center"
            app:cornerRadius="20dp"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>