<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F4F5 "
    android:orientation="vertical"
    tools:context="ilya.chistousov.countthefood.signin.presentation.fragment.SignInBottomSheetDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center|top"
        android:text="@string/sign_in"
        android:textAppearance="@style/CustomTextStyle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/sign_in_google"
            android:drawableStart="@drawable/google"
            android:textAppearance="@style/CustomTextStyle"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginWithEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/email"
            android:padding="16dp"
            android:text="@string/sign_in_email"
            android:textAppearance="@style/CustomTextStyle" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>